# json-forms

./: .gitignore  README.md  package-lock.json  package.json
app/: oci_config.json  pyproject.toml
app/modules/: agent.py  oci_client.py
app/server/: main.py
src/: App.tsx  index.tsx  jsonToInterface.ts
src/components/: AIForm.tsx  FormHandler.tsx  FormSubmitted.tsx  Header.tsx  JsonFormSkeleton.tsx  ProjectionBill.tsx  SimpleBarChart.tsx  Viewer.tsx
src/components/custom/rating/: Rating.tsx
src/components/custom/slider/: Slider.tsx  SliderControl.tsx  sliderControlTester.ts
src/components/forms/: JsonFormSkeleton.tsx  OIA.tsx
src/components/header/: Header.tsx
src/schema/carRegistry/: schema.json  typedCarRegistry.ts  uischema.json
src/schema/example/: schema.json  typedExample.ts  uischema.json
src/schema/oai/: oiaInterface.ts  schema.json  uiSchema.json
src/schema/orderPizza/: schema.json  uiSchema.json
src/schema/pages/: uiSchema.json
src/styles/: App.css  formHandler.css  header.css  oia.css  projectionBill.css  viewer.css
